@@ -1,3 +1,7 @@
+2014-06-10 Ben Shi <powerstudio1st AT 163.com>
+        * sim/ucsim/stm8.src/inst.cc:
+          Add indirect addressing handling in CLR, CPW & LD. Fix potential bugs in get_dest().
+
 2014-06-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* sim/ucsim/stm8.src/inst.cc,
